# video-editor

./: .gitignore  CMakeLists.txt  README.md
cmake/: FetchDependencies.cmake  FindFFmpeg.cmake
src/: main.cpp
src/app/: Application.cpp  Application.h
src/export/: AudioEncoder.cpp  AudioEncoder.h  ExportSession.cpp  ExportSession.h  ExportSettings.h  Muxer.cpp  Muxer.h  VideoEncoder.cpp  VideoEncoder.h
src/media/: AudioDecoder.cpp  AudioDecoder.h  AudioFrameQueue.cpp  AudioFrameQueue.h  AudioMixer.cpp  AudioMixer.h  AudioOutput.cpp  AudioOutput.h  Clock.cpp  Clock.h  DebugStats.h  FrameQueue.cpp  FrameQueue.h  MediaFile.cpp  MediaFile.h  PacketQueue.cpp  PacketQueue.h  PlaybackController.cpp  PlaybackController.h  VideoDecoder.cpp  VideoDecoder.h
src/timeline/: ClipPlayer.cpp  ClipPlayer.h  MediaAsset.h  Timeline.cpp  Timeline.h  TimelinePlayback.cpp  TimelinePlayback.h
src/ui/: ClipPropertiesUI.cpp  ClipPropertiesUI.h  ExportDialog.cpp  ExportDialog.h  FileDialog.cpp  FileDialog.h  ImGuiLayer.cpp  ImGuiLayer.h  PlayerUI.cpp  PlayerUI.h  TimelineUI.cpp  TimelineUI.h
src/vulkan/: Swapchain.cpp  Swapchain.h  TextureUploader.cpp  TextureUploader.h  VideoTexture.cpp  VideoTexture.h  VulkanContext.cpp  VulkanContext.h
